test/libsolidity/syntaxTests/errors/invalid_parameter_indexed.sol
contract C {
    error e1(uint indexed x);
}
// ----
// ParserError 2314: (31-38): Expected ',' but got 'indexed'